--- a/src/style.css
+++ b/src/style.css
@@ -8,12 +8,36 @@ body {
 
 :root {
   --main-page-color: #fff5e6;
+  --main-red: #ef4444;
+  --main-white: #f8fafc;
+  --main-black: #18181b;
+  --border-radius: 15px;
 }
 
 body {
   display: flex;
   flex-direction: column;
   text-align: center;
+  font-family: 'Damion', cursive;
+}
+
+ul {
+  list-style: none;
+}
+
+button {
+  font-family: 'Damion', cursive;
+  font-size: 25px;
+  border-radius: var(--border-radius);
+  color: var(--main-red);
+  background-color: var(--main-white);
+  border: 5px dashed var(--main-black);
+  padding: 20px 40px 20px 40px;
+}
+
+button:hover {
+  cursor: pointer;
+  box-shadow: 0px 0px 10px var(--main-red);
 }
 
 #content {
@@ -24,6 +48,7 @@ body {
 .header {
   width: 100%;
   background-color: var(--main-page-color);
+  border-bottom: 5px solid var(--main-black);
 }
 
 .header ul {
@@ -31,7 +56,7 @@ body {
   flex-direction: row;
   justify-content: center;
   list-style: none;
-  gap: 20px;
+  gap: 100px;
   padding: 40px 0 40px 0;
   margin: 0px;
 }
@@ -42,24 +67,87 @@ img {
 }
 
 .main-container {
-  background-color: rgb(248, 178, 178);
-  height: 100%;
+  height: 1500px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
+  background: url(images/black-and-white-checks.jpg);
+  background-repeat: repeat;
 }
 
 .content-container {
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: var(--main-page-color);
-  width: 75%;
-  height: 75%;
+  border-radius: var(--border-radius);
+  border: 5px solid var(--main-black);
+  width: 1250px;
+  min-width: 700px;
+  height: 1500px;
+  max-width: 90%;
+  max-height: 90%;
+}
+
+h2 {
+  font-family: 'Holtwood One SC', serif;
+  font-size: 80px;
+  color: var(--main-red);
+  margin: 25px 0px 0px 0px;
+}
+
+h4 {
+  font-size: 27px;
+  font-weight: 100;
+  margin-top: 0px;
+}
+
+.sub-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 25px;
+  margin-top: 0px;
+}
+
+.luigi-image {
+  width: 100px;
+  height: 110px;
+}
+
+.customer-review,
+.opening-times,
+.contact-us {
+  width: 1300px;
+  max-width: 80%;
+  font-family: 'Damion', cursive;
+  font-size: 25px;
+  padding: 10px;
+  border-radius: var(--border-radius);
+  border: 5px dotted var(--main-red);
+  margin-top: 60px;
+  background-color: var(--main-white);
+}
+
+.mario-image {
+  width: 60px;
+  height: 80px;
+}
+
+.quote-attribute {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
 .footer {
-  font-size: 15px;
+  background-color: var(--main-page-color);
+  border-top: 5px solid var(--main-black);
+  font-size: 20px;
+  font-weight: 70;
   padding: 50px 0 20px 0;
   display: flex;
   justify-content: center;
