--- a/src/style.css
+++ b/src/style.css
@@ -73,7 +73,7 @@ img {
   align-items: center;
   justify-content: center;
   position: relative;
-  background: url(images/black-and-white-checks.jpg);
+  background: url(../dist/images/black-and-white-checks.jpg);
   background-repeat: repeat;
 }
 
